tests/ui/attributes/positions/used.stderr
error: `#[used]` attribute cannot be used on functions
  --> $DIR/used.rs:7:1
   |
LL | #[used]
   | ^^^^^^^
   |
   = help: `#[used]` can only be applied to statics

error: `#[used]` attribute cannot be used on structs
  --> $DIR/used.rs:10:1
   |
LL | #[used]
   | ^^^^^^^
   |
   = help: `#[used]` can only be applied to statics

error: `#[used]` attribute cannot be used on traits
  --> $DIR/used.rs:13:1
   |
LL | #[used]
   | ^^^^^^^
   |
   = help: `#[used]` can only be applied to statics

error: `#[used]` attribute cannot be used on trait impl blocks
  --> $DIR/used.rs:16:1
   |
LL | #[used]
   | ^^^^^^^
   |
   = help: `#[used]` can only be applied to statics

error: `#[used]` attribute cannot be used on foreign statics
  --> $DIR/used.rs:21:5
   |
LL |     #[used]
   |     ^^^^^^^
   |
   = help: `#[used]` can only be applied to statics

error: aborting due to 5 previous errors

